完成状态维护 辖区维护 负责人维护三个模块

--- a/888repair/Views/Area/AreaIndex.cshtml
+++ b/888repair/Views/Area/AreaIndex.cshtml
@@ -1,11 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "StateIndex";
+    ViewBag.Title = "AreaIndex";
 }
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>状态维护</title>
+    <title>辖区维护</title>
     <style>
         body {
             padding: 32px; /*overflow-y: scroll;*/
@@ -18,9 +18,9 @@
         <div class="layui-col-md3">
             <div class="layui-input-group">
                 <div class="layui-input-split layui-input-prefix">
-                    状态
+                    系统类别
                 </div>
-                <input type="text" name="status" id="status" placeholder="此查询框为模糊查询……" required lay-verify="required" autocomplete="off" class="layui-input">
+                <input type="text" name="SystemCategory" id="SystemCategory" placeholder="此查询框为模糊查询……" required lay-verify="required" autocomplete="off" class="layui-input">
             </div>
         </div>
     </div>
@@ -31,25 +31,37 @@
         <button class="layui-btn layui-btn-sm" id="btn_del"><i class="layui-icon">删除&nbsp;&#xe640;</i></button>
     </div>
     <br />
-    <table class="layui-hide" lay-filter="user" id="test"></table>
+    <table class="layui-hide" lay-filter="user" id="AreaTable"></table>
 
 </body>
 
-<div class="layui-form" style="display:none"  id="window">
-    <br/><br /><br /><br />
+<div class="layui-form" style="display:none" id="editAreaWidow">
+    <br /><br />
     <div class="layui-form-item">
+        <input type="hidden" class="form-control" disabled="disabled" id="AreaId">
         <div class="layui-inline">
-            <input type="hidden" class="form-control" disabled="disabled" id="addID">
-
-            <label class="layui-form-label">状态</label>
+            <label class="layui-form-label">系统类别</label>
             <div class="layui-input-block">
-                <input type="text" name="addStatus" id="addStatus" autocomplete="off" class="layui-input">
+                <input type="text" name="addSystemCategory" id="addSystemCategory" autocomplete="off" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-inline">
+            <label class="layui-form-label">大楼别</label>
+            <div class="layui-input-inline">
+                <input type="text" name="addBuliding" id="addBuliding" autocomplete="off" class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-inline">
+            <label class="layui-form-label">位置</label>
+            <div class="layui-input-block">
+                <input type="text" name="addLocation" id="addLocation" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-inline">
             <label class="layui-form-label">权限</label>
             <div class="layui-input-inline">
-                <input type="text" name="addPermissiom" id="addPermissiom" autocomplete="off" class="layui-input" disabled="disabled">
+                <input type="text" name="addPermission" id="addPermission" autocomplete="off" class="layui-input" disabled="disabled">
             </div>
         </div>
     </div>
@@ -60,9 +72,9 @@
 
         var $ = layui.$;
         var table = layui.table;
-        
+
         $.ajax({
-            url: "@(Url.Action("getStateList", "State"))",  // 要提交的URL路径
+            url: "@(Url.Action("getAreaList", "Area"))",  // 要提交的URL路径
             type: "post",    // 发送请求的方式
             dataType: "JSON",     // 指定传输的数据格式
             beforeSend: function () {     //请求之前的方法
@@ -77,10 +89,10 @@
                         var layer = layui.layer;
 
                         table.render({
-                            elem: '#test',
+                            elem: '#AreaTable',
                             type: "post",
                             data: d.data,
-                            id: "statustable",
+                            id: "areaTableID",
                             contentType: 'application/json', // 参数为 json 格式传递
                             page: !0 || { //详细参数可参考 laypage 组件文档
                                 curr: 5,
@@ -96,10 +108,11 @@
                             , toolbar: true
                             , cols: [[
                                 { type: 'checkbox', LAY_CHECKED: false},
-                                { field: 'ID', title: 'ID' },
-                                { field: 'Status', title: '状态', },
-                                { field: 'Permissiom', title: '权限' }
-                                ,
+                               // { field: 'AreaId', title: 'AreaId' },
+                                { field: 'SystemCategory', title: '系统类别', },
+                                { field: 'Buliding', title: '大楼别' },
+                                { field: 'Location', title: '位置' },
+                                { field: 'Permission', title: '权限' },
                             ]]
                         });
                     });
@@ -115,15 +128,18 @@
         });
 
         function reloadDate() {
+            var model = {
+                SystemCategory: $('#SystemCategory').val(),
+            }
             $.ajax({
-                url: "@(Url.Action("getStateList", "State"))",  // 要提交的URL路径
+                url: "@(Url.Action("getAreaList", "Area"))",   // 要提交的URL路径
                 type: "post",    // 发送请求的方式
-                data: { status: $('#status').val() },
+                data: JSON.stringify(model),
                 dataType: "JSON",     // 指定传输的数据格式
                 success: function (result) {
                     if (result.IsSuccess) {
                         let d = result;
-                        table.reload('statustable', {
+                        table.reload('areaTableID', {
                         data: d.data,
                         page: { curr: 1 },
                         });
@@ -148,38 +164,42 @@
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_del').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_search').addClass("layui-btn-disabled").attr("disabled", true);
-            $("#addPermissiom").val("資訊");
+            $("#addSystemCategory").val("");
+            $("#addBuliding").val("");
+            $("#addLocation").val("");
+            $("#addPermission").val("資訊");
             layer.open({
-                title: '新增状态',
+                title: '新增辖区',
                 area: ['40%','30%'],
-                content: $("#window"),
+                content: $("#editAreaWidow"),
                 shade: 0.0,
                 type: 1,
                 btn: ['确定', '重置'],
                 btn1: function (index, layero) {
                     var model = {
-                        "ID": $("#addID").val(),
-                        "Status": $("#addStatus").val(),
-                        "Permissiom": $("#addPermissiom").val(),
+                        "SystemCategory": $("#addSystemCategory").val(),
+                        "Buliding": $("#addBuliding").val(),
+                        "Location": $("#addLocation").val(),
+                        "Permission": $("#addPermission").val(),
                     };
                    console.log(model);
                    $.ajax({
                        type: 'post',
-                       url: "@(Url.Action("editStatus", "State"))",
+                       url: "@(Url.Action("editArea", "Area"))",
                        data: JSON.stringify(model),
                        async: false,
                        dataType: "json",
                        // 告诉jQuery不要去处理发送的数据
                        processData: false,
                        // 告诉jQuery不要去设置Content-Type请求头
-                       contentType: 'application/json', 
+                       contentType: 'application/json',
                        beforeSend: function () {
                            // 禁用按钮防止重复提交
                            $('#btn1').addClass("layui-btn-disabled").attr("disabled", true);
                        },
                        success: function (result) {
                            if (result.IsSuccess) {
-                               alert("新增状态成功");
+                               alert("新增辖区成功");
                                $('#btn_add').removeClass("layui-btn-disabled").attr("disabled", false);
                                $('#btn_edit').removeClass("layui-btn-disabled").attr("disabled", false);
                                $('#btn_del').removeClass("layui-btn-disabled").attr("disabled", false);
@@ -194,7 +214,9 @@
                    });
                 },
                 btn2: function (index, layero) {
-                    $("#addStatus").val("");
+                    $("#addSystemCategory").val("");
+                    $("#addBuliding").val("");
+                    $("#addLocation").val("");
                     return false;
                 },
                 cancel: function (layero, index) {
@@ -209,7 +231,7 @@
 
         $('#btn_edit').click(function () {
           
-            var selectData = layui.table.checkStatus('statustable').data;
+            var selectData = layui.table.checkStatus('areaTableID').data;
             console.log(selectData);
             var arrays = new Array();
             if (selectData.length != 1) {
@@ -217,9 +239,11 @@
                 return false;
             } 
 
-            $("#addID").val(selectData[0].ID);
-            $("#addStatus").val(selectData[0].Status);
-            $("#addPermissiom").val(selectData[0].Permissiom);
+            $("#AreaId").val(selectData[0].AreaId);
+            $("#addSystemCategory").val(selectData[0].SystemCategory);
+            $("#addBuliding").val(selectData[0].Buliding);
+            $("#addLocation").val(selectData[0].Location);
+            $("#addPermission").val(selectData[0].Permission);
 
             $('#btn_add').addClass("layui-btn-disabled").attr("disabled", true);
             $('#btn_edit').addClass("layui-btn-disabled").attr("disabled", true);
@@ -228,22 +252,24 @@
 
 
             layer.open({
-                title: '修改状态',
+                title: '修改辖区信息',
                 area: ['40%','30%'],
-                content: $("#window"),
+                content: $("#editAreaWidow"),
                 shade: 0.0,
                 type:1,
                 btn: ['确定'],
                 btn1: function (index, layero) {
                     var model = {
-                        "ID": $("#addID").val(),
-                        "Status": $("#addStatus").val(),
-                        "Permissiom": $("#addPermissiom").val(),
+                        "AreaId": $("#AreaId").val(),
+                        "SystemCategory": $("#addSystemCategory").val(),
+                        "Buliding": $("#addBuliding").val(),
+                        "Location": $("#addLocation").val(),
+                        "Permission": $("#addPermission").val(),
                     };
                    console.log(model);
                    $.ajax({
                        type: 'post',
-                       url: "@(Url.Action("editStatus", "State"))",
+                       url: "@(Url.Action("editArea", "Area"))",
                        data: JSON.stringify(model),
                        async: false,
                        dataType: "json",
@@ -257,7 +283,7 @@
                        },
                        success: function (result) {
                            if (result.IsSuccess) {
-                               alert("修改状态成功");
+                               alert("修改辖区成功");
                                $('#btn_add').removeClass("layui-btn-disabled").attr("disabled", false);
                                $('#btn_edit').removeClass("layui-btn-disabled").attr("disabled", false);
                                $('#btn_del').removeClass("layui-btn-disabled").attr("disabled", false);
@@ -282,21 +308,21 @@
         });
 
         $('#btn_del').click(function (obj) {
-            var selectData = layui.table.checkStatus('statustable').data;
+            var selectData = layui.table.checkStatus('areaTableID').data;
             console.log(selectData);
             var arrays = new Array();
             $(selectData).each(function () {
                 var newArr = {};
-                newArr.ID = this.ID;
-                newArr.Status = this.Status;
-                newArr.Permissiom = this.Permissiom;
+                newArr.AreaId = this.AreaId;
+                newArr.SystemCategory = this.SystemCategory;
+                newArr.Buliding = this.Buliding;
                 arrays.push(newArr)
             });
             if (selectData.length ==0 ) {
                 alert("请选择数据");
             } else {
                 $.ajax({
-                    url: "@(Url.Action("DeleteState", "State"))",
+                    url: "@(Url.Action("deleteArea", "Area"))",
                     type: "post",
                     dataType: "json",
                     contentType: "application/json;charset=UTF-8",
