--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -53,7 +53,9 @@
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree Menu" lay-filter="test" id="Menu">
                     <li class="layui-nav-item current" data-id="fill"><a class="layui-nav-item " language="fill">填写问题</a></li>
-                    <li class="layui-nav-item" data-id="area"><a class="layui-nav-item " language="statusfix">状态维护</a></li>
+                    <li class="layui-nav-item" data-id="area"><a class="layui-nav-item ">辖区维护</a></li>
+                    <li class="layui-nav-item" data-id="charge"><a class="layui-nav-item " language="chargefix">负责人维护</a></li>
+                    <li class="layui-nav-item" data-id="status"><a class="layui-nav-item " language="statusfix">状态维护</a></li>
                     <li class="layui-nav-item"><a href="javascript:;">click menu item</a></li>
                     <li class="layui-nav-item"><a href="">the links</a></li>
                 </ul>
@@ -131,11 +133,19 @@
             var pathn, i;
 
             switch (sId) {
-                 case "#fill":
+                case "#area":
+                    pathn = "@(Url.Action("AreaIndex", "Area"))",
+                        i = 0;
+                    break;
+                case "#fill":
                     pathn = "@(Url.Action("GroupIndex", "Group"))",
                         i = 0;
                     break;
-                case "#area":
+                case "#charge":
+                    pathn = "@(Url.Action("DirectorIndex", "Director"))",
+                        i = 0;
+                    break;
+                case "#status":
                     pathn = "@(Url.Action("StateIndex", "State"))",
                         i = 0;
                     break;
