--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
     <title>
         888报修系统 888 repair system
     </title>
-    <link rel="stylesheet" href="../src/css/layui.css">
-    <script src="../Scripts/jquery-3.3.1.min.js"></script>
-    <script src="../src/language/index.js"></script>
+    <link rel="stylesheet" href="~/src/css/layui.css">
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/src/language/index.js"></script>
 </head>
 <body>
     <div class="layui-layout layui-layout-admin">
@@ -101,7 +101,7 @@
         </div>
     </div>
 </body>
-<script src="../src/layui.js"></script>
+<script src="~/src/layui.js"></script>
 <script>
     //JS
     layui.use(['element', 'layer', 'util'], function () {
